# embry0

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lab  package-lock.json  pyproject.toml  snap2.md  snap3.md  snapshot.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-mcp/: after-popup-close.yml  analysis-section.yml  langgraph-tree-deep.yml  module-0-s2-deep.yml  page-2026-04-03T10-19-32-219Z.yml  page-2026-04-03T10-20-05-821Z.yml  page-2026-04-03T10-20-39-839Z.yml  page-2026-04-03T10-20-55-719Z.yml  page-2026-04-03T10-21-10-421Z.yml  page-2026-04-03T10-21-35-955Z.yml  page-2026-04-03T10-21-41-324Z.yml  page-2026-04-03T10-21-53-304Z.yml  page-2026-04-03T10-22-32-736Z.yml  page-2026-04-03T10-22-52-543Z.yml  page-2026-04-03T10-23-25-110Z.yml  page-2026-04-03T10-24-31-155Z.yml  page-2026-04-03T11-13-51-339Z.yml  page-2026-04-03T11-14-20-246Z.yml  page-2026-04-03T11-15-47-076Z.yml  page-2026-04-03T11-16-18-484Z.yml  page-2026-04-03T11-16-41-047Z.yml  section3-deep.yml  section3-snap.yml  tree-scrolled.yml
athanor/: __init__.py  branding.py  cli.py  config.py  observability.py
athanor/agents/: claude_cli_session.py  config_builder.py  executor.py  executor_factory.py  invocation.py  registry.py  resolver.py  sdk.py  session.py  triage_actions.py
athanor/api/: app.py  auth.py  deps.py
athanor/audit/: __init__.py  db_logger.py  helpers.py  logger.py
athanor/cache/: __init__.py  image_builder.py  image_builder_cli.py  lockfile_hash.py  prebaked_image.py  volume_manager.py  volume_warmer.py
athanor/cli/: __main__.py  migrate_qa_config.py
athanor/execution/: __init__.py  agent_runner.py  auth_provider.py  docker_client.py  events.py  github_tokens.py  image_manager.py  image_registry.py  sandbox_manager.py  worker_env.py
athanor/notifications/: channels.py  dispatcher.py  github.py  github_comment.py  inbound_parser.py  qa_check.py  qa_comment.py  telegram.py
athanor/orchestration/: __init__.py  checkpoint.py  context.py  state.py
athanor/qa/: __init__.py  event_bus.py
athanor/safety/: __init__.py  error_codes.py  patterns.py  policy.py
athanor/sandbox/: __init__.py  ask_user.py  events.py  runner.py  safety.py
athanor/services/: github_sync.py  issue_executor.py  linear_dispatch.py
athanor/storage/: __init__.py  database.py  encryption.py  schemas.py
athanor/workflows/: _validation.py  base.py  registry.py
athanor/workspace_providers/: __init__.py  fakes.py  provider.py  registry.py
docs/: api.md  architecture.md  configuration.md  enterprise-scale-roadmap.md  glossary.md  onboarding.md  providers.md  qa-yaml-reference.md  running-qa.md  webhooks.md
docs/agents/: domain.md  issue-tracker.md
docs/contracts/: claude-cli-session-file-layout.md
docs/ops/: git-worktree-workflow.md
docs/rca/: 2026-07-22-sales-crm-git-identity.md
docs/spikes/: 2026-07-23-emb54-xai-native-sdk.md
embry0/: __init__.py  branding.py  config.py  observability.py
embry0/agents/: __init__.py  config_builder.py  executor.py  executor_factory.py  executor_xai.py  invocation.py  mcp_client.py  providers.py  resolver.py  session.py  xai_tools.py
embry0/api/: __init__.py  app.py  deps.py
embry0/audit/: __init__.py  db_logger.py  helpers.py
embry0/cache/: image_builder.py  image_builder_cli.py  prebaked_image.py  turbo_remote.py  volume_manager.py  volume_warmer.py
embry0/cli/: __main__.py  migrate_qa_config.py
embry0/execution/: agent_runner.py  auth_provider.py  docker_client.py  egress.py  events.py  github_tokens.py  image_manager.py  image_registry.py  sandbox_manager.py  worker_env.py  workspace_diff.py  xai_credential.py
embry0/notifications/: channels.py  dispatcher.py  github_comment.py  inbound_dispatch.py  qa_check.py  qa_comment.py  telegram.py
embry0/orchestration/: budget.py  checkpoint.py  state.py
embry0/qa/: __init__.py  event_bus.py
embry0/safety/: __init__.py  error_codes.py  policy.py
embry0/sandbox/: ask_user.py  git_identity.py  qa_abort.py  runner.py  safety.py  xai_token.py
embry0/services/: bootstrap.py  github_sync.py  issue_executor.py  linear_dispatch.py  linear_sync.py  watcher.py
embry0/storage/: database.py  schemas.py
embry0/workflows/: __init__.py  _validation.py  registry.py
embry0/workspace_init/: __init__.py  base.py  git.py  http.py  local.py  none.py  registry.py
embry0/workspace_providers/: __init__.py  fakes.py  provider.py  registry.py  root_scoped.py  static_apps.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
infra/: Dockerfile.orchestrator  Dockerfile.proxy  Dockerfile.sandbox  Dockerfile.sandbox.qa  dind-daemon.json  docker-compose.cache.yml  docker-compose.yml
infra/scripts/: load-qa-image-into-dind.sh  push-images-to-registry.sh  qa-compose  qa-ready-check.py  setup-sandbox-networks.sh
legion/: branding.py  cli.py  config.py
legion/agents/: config_builder.py  executor.py  executor_factory.py  invocation.py  registry.py  resolver.py  sdk.py
legion/api/: app.py  auth.py  deps.py  schemas.py
legion/audit/: __init__.py  db_logger.py  helpers.py  logger.py
legion/execution/: agent_runner.py  auth_provider.py  docker_client.py  events.py  image_manager.py  sandbox_manager.py
legion/notifications/: __init__.py  dispatcher.py  github.py  telegram.py
legion/orchestration/: checkpoint.py  state.py
legion/safety/: __init__.py  error_codes.py  patterns.py  policy.py
legion/sandbox/: ask_user.py  events.py  runner.py  safety.py
legion/services/: github_sync.py  issue_executor.py
legion/storage/: database.py  encryption.py  schemas.py
legion/workflows/: registry.py
repo-configs/: README.md
scripts/: dispatch-embry0  seed_qa_env.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_config.py  test_api_jobs.py  (+24 more)
(+951 files in other folders)
