[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embry0"
version = "0.1.0"
description = "General-purpose agent orchestration engine built on LangGraph and Claude Agent SDK"
license = "MIT"
authors = [{ name = "Tomas McMonigal" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "structlog>=24.0,<26",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<0.136",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.27,<1",
    "langgraph>=0.4,<1",
    "langgraph-checkpoint-postgres>=2.0,<3",
    "aiohttp>=3.9,<4",
    "claude-agent-sdk>=0.1.50",
    "psycopg[binary]>=3.0,<4",
    "cryptography>=42,<47",
    "prometheus-fastapi-instrumentator>=6.0,<8",
    "minio>=7.2,<8",
    "pyyaml>=6.0,<7",
    "sse-starlette>=2.0,<4",
]

[project.urls]
Repository = "https://github.com/sudoTomas/embry0"
Issues = "https://github.com/sudoTomas/embry0/issues"

[project.scripts]
embry0 = "embry0.cli.__main__:main"

[project.entry-points."embry0.workspace_providers"]
npm-workspaces-turbo = "embry0.workspace_providers.npm_workspaces_turbo.provider:NpmWorkspacesTurboProvider"
static-apps = "embry0.workspace_providers.static_apps:StaticAppsProvider"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=7.0,<8",
    "pytest-timeout>=2.3,<3",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "testcontainers[postgres]>=4.0,<5",
    "pytest-aiohttp>=1.0,<2",
    "types-PyYAML>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["embry0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length enforced by formatter, not linter

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "sandbox_smoke: real-sandbox end-to-end tests. Run with `pytest -m sandbox_smoke`.",
    "requires_docker: integration tests that need a real Docker daemon. Run with `pytest -m requires_docker`.",
    "requires_postgres: requires a live PostgreSQL instance at TEST_DATABASE_URL.",
    "requires_minio: needs a reachable MinIO instance (set MINIO_ENDPOINT)",
    "requires_dind: needs a reachable DinD instance (set DIND_ENDPOINT)",
]
